k8s/ma2-mysql-statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: iceberg-mysql
  namespace: dpd-iceberg
spec:
  ports:
    - port: 3306
  selector:
    app: iceberg-mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: iceberg-mysql
  namespace: dpd-iceberg
spec:
  selector:
    matchLabels:
      app: iceberg-mysql
      app.kubernetes.io/name: iceberg-mysql
  serviceName: iceberg-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: iceberg-mysql
        app.kubernetes.io/name: iceberg-mysql
    spec:
      containers:
        - name: iceberg-mysql
          image: mysql:9.2
          ports:
            - name: iceberg-mysql
              containerPort: 3306
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              # Check we can execute queries over TCP (skip-networking is off).
              command:
                - bash
                - -c
                - "mysql --password=$MYSQL_ROOT_PASSWORD -h 127.0.0.1 -e 'SELECT 1'"
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
  volumeClaimTemplates:
    - metadata:
        name: iceberg-mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: rook-replicated
