k8s/ma2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iceberg-rest-java
  namespace: dpd-iceberg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iceberg-rest-java
  template:
    metadata:
      labels:
        app: iceberg-rest-java
    spec:
      containers:
        - env:
            - name: CATALOG__CATALOG_IMPL
              value: "org.apache.iceberg.jdbc.JdbcCatalog"
            - name: CATALOG__WAREHOUSE
              value: hdfs://ma2-datalake/alluxio/iceberg
            - name: CATALOG__URI
              value: jdbc:mysql://iceberg-mysql:3306/iceberg
            - name: KRB_PRINCIPAL
              value: iceberg@PULSE.PROD
            - name: KRB5CCNAME
              value: /krb/krb5cc
            - name: REST_PORT
              value: "8181"
          image: registry.pulsepoint.com/forge/iceberg-rest-java/ma2:0.1.0-2-g5b0da47-dirty
          livenessProbe:
            exec:
              command:
                - /app/bin/pyiceberg
                - --uri
                - http://localhost:8181/
                - list
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 10
          name: iceberg-rest-java
          ports:
            - containerPort: 8181
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 4Gi
          volumeMounts:
            - mountPath: /krb
              name: krb
        - command:
            - /refresh.sh
          image: registry.pulsepoint.com/forge/iceberg-rest-java/ma2:0.1.0-2-g5b0da47-dirty
          livenessProbe:
            exec:
              command:
                - /usr/bin/klist
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          name: kinit
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - mountPath: /run/secrets/keytab
              name: keytab
              readOnly: true
            - mountPath: /krb
              name: krb
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app: iceberg-rest-java
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - name: keytab
          secret:
            secretName: iceberg-keytab
        - name: krb
          emptyDir:
---
apiVersion: v1
kind: Service
metadata:
  name: iceberg-rest-java
  namespace: dpd-iceberg
spec:
  selector:
    app: iceberg-rest-java
  ports:
    - port: 8181
      targetPort: 8181
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iceberg-rest-java
  namespace: dpd-iceberg
spec:
  ingressClassName: nginx
  rules:
    - host: iceberg-rest-java.k8s-dm-ma2-prod.pulse.prod
      http:
        paths:
          - backend:
              service:
                name: iceberg-rest-java
                port:
                  number: 8181
            path: /
            pathType: Prefix
